# michelangelo

./: .bazelignore  .bazelrc  .dockerignore  .env.local  .envrc  .gazelleignore  .gitignore  .mactlrc.example  .pre-commit-config.yaml  ADOPTERS.md  BUILD.bazel  BUILD_AND_TEST_SUMMARY.md  BUILD_VERIFICATION.md  CHANGELOG.md  COMPILER_FLOW_CHARTS.md  COMPILER_SUMMARY.md  CONCURRENT_RECONCILES_MAP_CHANGES.md  CONTRIBUTING.md  DOCUMENTATION_ASSESSMENT_SUMMARY.md  DOCUMENTATION_IMPROVEMENT_PLAN_FINAL.md  DOCUMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.txt  INGESTER_CHECKLIST.md  INGESTER_IMPLEMENTATION_SUMMARY.md  INGESTER_LIMITATIONS.md  INGESTER_PRODUCTION_GAPS.md  INGESTER_SANDBOX_GUIDE.md  INGESTER_SANDBOX_INTEGRATION.md  LICENSE  MAINTAINERS.md  MODULE.bazel  MY_PROMPTS.md  PHASE1_EXECUTION_CHECKLIST.md  PROTO_EXTENSIONS.md  QUICK_REFERENCE.md  README.md  SANDBOX_INGESTER_GUIDE.md  SECURITY.md  (+19 more)
bazel/rules/proto/: BUILD.bazel  kube_proto_sql.bzl  kube_proto_yaml.bzl  patched_proto.bzl  protobuf.bzl
go/: .golangci.yml  BUILD.bazel  TODO_ENFORCEMENT.md  TODO_INVENTORY.csv  go.mod  go.sum  tools.go  unused.go
go/.cursor/rules/: go-coding-patterns.mdc  go-development-guide.mdc  go-troubleshooting.mdc
go/api/: BUILD.bazel  api.go  api_test.go  ext_example_test.go  ext_registry.go  ext_registry_test.go  interface.go
go/api/apimocks/: BUILD.bazel  interface_mocks.go
go/api/apiutil/: BUILD.bazel  apiutil.go  apiutil_test.go
go/api/crd/: BUILD.bazel  gateway.go  gateway_test.go  module.go  schema_diff.go  schema_diff_test.go  sync.go  sync_test.go  versions.go  versions_test.go
go/api/handler/: BUILD.bazel  blob_handler.go  builder.go  builder_test.go  composite_handler.go  config.go  handler.go  handler_redundancy_validation_test.go  handler_test.go  interfaces.go  k8s_handler.go  metadata_handler.go  metadata_integration_test.go  metrics_handler.go  module.go  refactoring_validation_test.go  validation_handler.go  validation_test.go
go/api/utils/: BUILD.bazel  audit_log.go  errors.go  utils.go  utils_test.go
go/api/webhook/: BUILD.bazel  generate-certs.sh  test-project-v2alpha1.yaml  webhook.go  webhook_test.go
go/auth/: BUILD.bazel  auth.go  auth_test.go
go/base/blobstore/: BUILD.bazel  blobstore.go  blobstore_test.go  context_aware.go  context_aware_test.go  module.go
go/base/cadencefx/: BUILD.bazel  config.go  module.go
go/base/conditions/: arch.md
go/base/config/: BUILD.bazel  config.go  config_test.go  ingester_config.go  ingester_config_test.go  load.go  utils.go  yaml.go  yaml_test.go
go/base/env/: BUILD.bazel  env.go
go/base/logging/: BUILD.bazel  config.go  config_test.go  logging.go  logging_test.go
go/base/pluginmanager/: BUILD.bazel  interface.go
go/base/revision/: BUILD.bazel  interface.go
go/base/workflowclient/: BUILD.bazel  module.go  module_test.go
go/base/zapfx/: BUILD.bazel  config.go  module.go  module_test.go
go/cadence-starlark/: README.md
go/cadence-starlark/cadstar/: BUILD.bazel  converter.go  exit_hook.go  plugin.go  service.go  thread.go
go/cadence-starlark/ext/: BUILD.bazel  cadence.go  json_path.go  lang.go  tar.go  zap.go
go/cadence-starlark/plugin/: BUILD.bazel  plugins.go
go/cadence-starlark/star/: BUILD.bazel  callable_object.go  codec.go  codec_test.go  dataclass.go  fs.go  fs_test.go  star.go  utils.go
go/cauldron/worker/: BUILD.bazel  module.go
go/cmd/apiserver/: BUILD.bazel  Dockerfile.apiserver-reflection  README.md  config.go  config_test.go  main.go  main_test.go  run-apiserver-docker-reflection.sh  yarpc.go  yarpc_test.go
go/cmd/controllermgr/: BUILD.bazel  README.md  config.go  config_test.go  ingester_providers.go  main.go
go/cmd/temporalworker/: BUILD.bazel  main.go
go/cmd/worker/: BUILD.bazel  README.md  main.go
go/components/: arch-overview.md  traffic-flow.md
go/components/controllerutil/: BUILD.bazel  reconciler.go
go/components/deployment/: AUDITLOG.md  BUILD.bazel  METADATA  PROGRESS.md  README.md  arch.md  constants.go  controller.go  controller_test.go  metrics.go  module.go  util.go
go/components/inferenceserver/: BUILD.bazel  arch.md  cluster-target-decoupling-proposal.md  constants.go  controller.go  controller_test.go  events.go  module.go  (+1 more)
go/controllermgr/: BUILD.bazel  BUILD_test.bazel  config.go  crd_check.go  crd_check_test.go  crd_sync.go  crd_sync_test.go  metrics.go  metrics_example.go  module.go  schema_validator.go
go/deployment/: BUILD.bazel  README.md  controller.go  module.go
go/inferenceserver/: BUILD.bazel  constants.go  controller.go  module.go  types.go
go/logging/: BUILD.bazel  audit_log_struct.go  audit_logger.go  audit_logger_test.go  constants.go  helper_logger.go  integration_test.go  noop_logr_sink.go  service_logger.go  service_logger_test.go  unified_logger.go  unified_logger_test.go  utils.go  utils_test.go
go/storage/: BUILD.bazel  blob_storage.go  metadata_storage.go  storage_config.go
go/temporalworker/: BUILD.bazel  config.go  module.go
go/worker/: BUILD.bazel  config.go  mock_worker.go  module.go
idl/: BUILD.bazel
idl/api/: BUILD.bazel  conditions.proto  list.proto  options.proto
idl/michelangelo/: BUILD.bazel
proto-go/api/: BUILD.bazel  conditions.pb.go  list.pb.go  options.pb.go  typed_struct.pb.go
proto/api/: BUILD.bazel  conditions.proto  list.proto  options.proto  typed_struct.proto
python/: .dockerignore  .gitignore  Dockerfile  README.md  bert_local.tar  create-project.json  demo.ipynb  example_flow_explanation.yml  example_tasks.py  fix-cadence.sh  pyproject.toml  pyproject.toml.enhanced  test_basic.yml  test_collect.yml  test_complex.yml  test_conditional.yml  test_foreach.yml  test_generated_code.py  test_with_inputs.yml
python/examples/: Dockerfile  Dockerfile-vllm  Dockerfile-vllm.template  Dockerfile.optimized  Dockerfile.template  README.md  build_docker.sh  entrypoint.sh
python/michelangelo/: __init__.py
python/tests/: task_test.py
tools/gen-ext-register/: BUILD.bazel  main.go
tools/proto-patcher/: BUILD.bazel  main.go  main_test.go
(+2833 files in other folders)
