# gazelle:exclude .git/
# gazelle:exclude pkg/
# gazelle:exclude python/
# gazelle:exclude build/
# gazelle:exclude tools/bazelisk.py
# gazelle:proto default
# gazelle:go_naming_convention go_default_library
# gazelle:go_naming_convention_external go_default_library
# gazelle:prefix github.com/michelangelo-ai/michelangelo

load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")
load("@io_bazel_rules_go//go:def.bzl", "TOOLS_NOGO", "nogo")
load("@rules_python_gazelle_plugin//:def.bzl", "GAZELLE_PYTHON_RUNTIME_DEPS")

gazelle_binary(
    name = "gazelle_bin",
    languages = DEFAULT_LANGUAGES + ["@rules_python_gazelle_plugin//python"],
)

gazelle(
    name = "gazelle",
    data = GAZELLE_PYTHON_RUNTIME_DEPS,
    gazelle = ":gazelle_bin",
)

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go/go.mod",
        "-to_macro=third_party/automatic_repos.bzl%go_repositories",
        "-prune",
    ],
    command = "update-repos",
)

nogo(
    name = "default_nogo",
    visibility = ["//visibility:public"],
    deps = TOOLS_NOGO,
)
