module(name = "michelangelo")

###########################################
############ Bazel modules ################
###########################################
bazel_dep(name = "rules_python", version = "0.40.0")
bazel_dep(name = "rules_go", version = "0.50.1", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.40.0", repo_name = "bazel_gazelle")
bazel_dep(name = "rules_python_gazelle_plugin", version = "0.40.0")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_oci", version = "2.0.1")
bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "protobuf", version = "29.0-rc3", repo_name = "com_google_protobuf")

###########################################
########### Toolchain Registrations #######
###########################################
go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    version = "1.23.3",
)

go_sdk.nogo(
    includes = ["@//:__subpackages__"],
    nogo = "//:default_nogo",
)

###########################################
############# Third-party DEPENDENCIES ####
###########################################
go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//go:go.mod")
use_repo(
    go_deps,
    "com_github_dave_dst",
    "com_github_gobuffalo_flect",
    "com_github_gogo_protobuf",
    "com_github_golang_protobuf", # keep needed by gogo proto compiler
    "com_github_google_uuid",
    "com_github_michelangelo_ai_michelangelo_proto",
    "com_github_stretchr_testify",
    "io_k8s_api",
    "io_k8s_apiextensions_apiserver",
    "io_k8s_apimachinery",
    "io_k8s_sigs_controller_runtime",
    "io_k8s_sigs_yaml",
    "org_golang_google_genproto", # keep needed by gogo proto compiler
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_uber_go_yarpc",
)
go_deps.gazelle_override(
    directives = [
        "gazelle:proto default",
        "gazelle:proto_import_prefix k8s.io/api",
        "gazelle:go_generate_proto false",
        "gazelle:resolve proto k8s.io/apimachinery/pkg/api/resource/generated.proto @io_k8s_apimachinery//pkg/api/resource:resource_proto",
        "gazelle:resolve proto k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto @io_k8s_apimachinery//pkg/apis/meta/v1:v1_proto",
        "gazelle:resolve proto k8s.io/apimachinery/pkg/runtime/generated.proto @io_k8s_apimachinery//pkg/runtime:runtime_proto",
        "gazelle:resolve proto k8s.io/apimachinery/pkg/runtime/schema/generated.proto @io_k8s_apimachinery//pkg/runtime/schema:schema_proto",
        "gazelle:resolve proto k8s.io/apimachinery/pkg/util/intstr/generated.proto @io_k8s_apimachinery//pkg/util/intstr:intstr_proto",
    ],
    path = "k8s.io/api",
)
