module(name = "michelangelo")

###########################################
############ Bazel modules ################
###########################################
bazel_dep(name = "rules_python", version = "0.40.0")
bazel_dep(name = "rules_go", version = "0.50.1", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.40.0", repo_name = "bazel_gazelle")
bazel_dep(name = "rules_python_gazelle_plugin", version = "0.40.0")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_oci", version = "2.0.1")
bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "protobuf", version = "29.0-rc3", repo_name = "com_google_protobuf")

###########################################
########### Toolchain Registrations #######
###########################################
go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    version = "1.23.3",
)
go_sdk.nogo(
    includes = ["@//:__subpackages__"],
    nogo = "//:default_nogo",
)

###########################################
############# Third-party DEPENDENCIES ####
###########################################
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base",
    digest = "sha256:ccaef5ee2f1850270d453fdf700a5392534f8d1a8ca2acda391fbb6a06b81c86",
    image = "gcr.io/distroless/base",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(oci, "distroless_base", "distroless_base_linux_amd64", "distroless_base_linux_arm64")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//go:go.mod")
use_repo(
    go_deps,
    "com_github_dave_dst",
    "com_github_go_logr_logr",
    "com_github_go_logr_zapr",
    "com_github_gobuffalo_flect",
    "com_github_gogo_protobuf",
    "com_github_gogo_status",
    "com_github_golang_mock",
    "com_github_golang_protobuf",
    "com_github_google_uuid",
    "com_github_michelangelo_ai_michelangelo_proto",
    "com_github_stretchr_testify",
    "com_github_uber_go_tally",
    "io_k8s_api",
    "io_k8s_apiextensions_apiserver",
    "io_k8s_apimachinery",
    "io_k8s_client_go",
    "io_k8s_sigs_controller_runtime",
    "io_k8s_sigs_yaml",
    "org_golang_google_genproto",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_tools",
    "org_uber_go_config",
    "org_uber_go_fx",
    "org_uber_go_yarpc",
    "org_uber_go_zap",
)
go_deps.gazelle_override(
    directives = [
        "gazelle:proto default",
        "gazelle:proto_import_prefix k8s.io/api",
        "gazelle:go_generate_proto false",
        "gazelle:resolve proto k8s.io/apimachinery/pkg/api/resource/generated.proto @io_k8s_apimachinery//pkg/api/resource:resource_proto",
        "gazelle:resolve proto k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto @io_k8s_apimachinery//pkg/apis/meta/v1:v1_proto",
        "gazelle:resolve proto k8s.io/apimachinery/pkg/runtime/generated.proto @io_k8s_apimachinery//pkg/runtime:runtime_proto",
        "gazelle:resolve proto k8s.io/apimachinery/pkg/runtime/schema/generated.proto @io_k8s_apimachinery//pkg/runtime/schema:schema_proto",
        "gazelle:resolve proto k8s.io/apimachinery/pkg/util/intstr/generated.proto @io_k8s_apimachinery//pkg/util/intstr:intstr_proto",
    ],
    path = "k8s.io/api",
)
