load("@io_bazel_rules_go//go:def.bzl", "go_library")

# gazelle:prefix github.com/michelangelo-ai/michelangelo/go
# gazelle:resolve go go github.com/michelangelo-ai/michelangelo/proto/api //proto/api:go_default_library
# gazelle:resolve go go github.com/michelangelo-ai/michelangelo/proto/api/v2 //proto/api/v2:go_default_library
# gazelle:resolve go go github.com/michelangelo-ai/michelangelo/proto/test/kubeproto/record //proto/test/kubeproto/record:go_default_library
# gazelle:resolve go go github.com/michelangelo-ai/michelangelo/proto/test/kubeproto //proto/test/kubeproto:go_default_library

go_library(
    name = "go_default_library",
    srcs = ["tools.go"],
    importpath = "github.com/michelangelo-ai/michelangelo/go",
    visibility = ["//visibility:public"],
    deps = ["@io_k8s_api//core/v1:go_default_library"],
)
