load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["tools.go"],
    importpath = "github.com/michelangelo-ai/michelangelo/go",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_protobuf//ptypes/any:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@org_golang_google_genproto//protobuf/api:go_default_library",
        "@org_golang_x_tools//go/packages:go_default_library",
    ],
)
