[tool.poetry]
name = "michelangelo-ai"
version = "0.1.0"
description = "Michelangelo is an end-to-end model lifecycle management system at large scale"
authors = ["Michelangelo Team <michelangelo-oss-group@uber.com>"]
readme = "README.md"
exclude = ["michelangelo"]    # TODO: temporary exclude all codes in package building
packages = [
    { include = "michelangelo" },
]


[tool.poetry.dependencies]
fsspec = "2024.9.0"
grpcio = "^1.70.0"
protobuf = "^5.29.3"
pydantic = "^2.10.6"
python = "^3.9.0"
typing-extensions = "^4.12.2"

### Optional dependencies
# For plugin
ray = {extras = ["default"], version = "^2.41.0", optional = true }

# For example run
accelerate = { version = "0.30.1", optional = true }
datasets = { version = "3.2.0", optional = true }
numpy = { version = "1.23.4", optional = true }
pandas = { version = "1.5.1", optional = true }
pyarrow = { version = "^19.0.0", optional = true }
s3fs = { version = "2024.9.0", optional = true }
torch = { version = "2.4.0", optional = true }
transformers = { version = "4.43.2", optional = true }
vllm = { version = "0.6.0", optional = true }
setuptools = { version = "72.2.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.9.1"
jinja2 = "^3.1.2"


[tool.poetry.scripts]
ma = 'michelangelo.cli.cli:main'


[tool.poetry.extras]
plugin = ["ray"]
example = ["accelerate", "datasets", "numpy", "pandas", "pyarrow", "ray", "s3fs", "torch", "transformers", "vllm", "setuptools"]


[tool.pytest.ini_options]
pythonpath = [
  "."
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# https://peps.python.org/pep-0008/
line-length = 88
indent-width = 4

# Assume Python 3.9
target-version = "py39"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
