[tool.poetry]
name = "michelangelo-ai"
version = "0.1.0"
description = "Michelangelo is an end-to-end model lifecycle management system at large scale"
authors = ["Michelangelo Team <michelangelo-oss-group@uber.com>"]
readme = "README.md"
exclude = ["michelangelo/example", "michelangelo/tests", "michelangelo/tools"]    # TODO: temporary exclude all codes in package building
packages = [
    { include = "michelangelo" },
]


[tool.poetry.dependencies]
fsspec = ">=2023.10.0"
grpcio = ">=1.66.1"
protobuf = ">=5.27.1"
pydantic = ">=2.10.6"
python = "^3.9.0"
pyspark = "3.5.5"
typing-extensions = ">=4.12.2"
pyyaml = "^6.0.1"
chronon-ai = "0.0.109"
thrift = "0.13.0"
sqlglot = "^27.29.0"


### Optional dependencies
# For plugin
ray = {extras = ["default"], version = "2.50.0", optional = true }

# For development
pytest = { version = "^8.3.4", optional = true }
pytest-cov = { version = "^6.0.0", optional = true }
coverage = { extras = ["toml"], version = "^7.6.0", optional = true }
ruff = { version = "^0.9.1", optional = true }
jinja2 = { version = "^3.1.2", optional = true }
pre-commit = {version = "^4.2.0", optional = true}
docker = { version = "^7.1.0", optional = true }

# For example run
accelerate = { version = "0.34.2", optional = true }
datasets = { version = "3.2.0", optional = true }
numpy = { version = "^1.26.0", optional = true }
pandas = { version = "^2.1.0", optional = true }
pyarrow = { version = "^19.0.0", optional = true }
s3fs = { version = "2024.9.0", optional = true }
torch = { version = "2.6.0", optional = true }
pytorch_lightning = { version = "2.2.0", optional = true }
einops = { version = "0.8.0", optional = true }
transformers = { version = "4.48.2", optional = true }
xgboost_ray = {version = "0.1.19", optional = true }
xgboost = {version = "2.1.4", optional = true }
kaggle = { version = "^1.6.17", optional = true }
scikit-learn = { version = "^1.5.2", optional = true }
mlflow = "2.22.0"
mlflow-skinny = "2.22.0"
boto3 = "1.28.0"  # Required for S3 access by MLflow
pymysql = "1.1.1"

# For VLLM
setuptools = { version = "74.1.1", optional = true }
vllm = { version = "0.8.1", optional = true }

# For MACTL
grpcio-reflection = { version = ">=1.66.1", optional = true }
PyYAML = { version = "6.0.2", optional = true }
GitPython = { version = ">=3.1.44", optional = true }


[tool.poetry.scripts]
ma = 'michelangelo.cli.cli:main'


[tool.poetry.extras]
dev = ["pytest", "pytest-cov", "coverage", "ruff", "jinja2", "pre-commit", "docker", "torch", "pandas", "numpy", "transformers", "pyarrow", "pytorch_lightning", "grpcio-reflection", "PyYAML", "GitPython"]
plugin = ["ray", "pyspark"]
example = ["accelerate", "datasets", "numpy", "pandas", "pyarrow", "ray", "s3fs", "torch", "transformers", "pytorch_lightning", "einops", "xgboost", "xgboost_ray", "kaggle", "scikit-learn", "chronon-ai", "thrift", "sqlglot", "pyspark", "ray"]
vllm = ["accelerate", "datasets", "numpy", "pandas", "pyarrow", "ray", "s3fs", "torch", "transformers", "pytorch_lightning", "einops", "vllm", "setuptools"]
mactl = ["grpcio-reflection", "PyYAML", "GitPython"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "michelangelo/api/v2/services/gen/**",
    "michelangelo/gen/**",
]

# https://peps.python.org/pep-0008/
line-length = 88
indent-width = 4

# Assume Python 3.9
target-version = "py39"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

# ============================================================================
# Coverage Configuration
# ============================================================================

[tool.coverage.run]
source = ["michelangelo"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*_test.py",
    "*/gen/*",
    "*/.venv/*",
    "*/examples/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
skip_empty = true
sort = "Cover"
exclude_lines = [
    # Default exclusions
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "except ImportError:",
    # Additional exclusions
    "pass",
    "\\.\\.\\.",
    "@overload",
]

# Overall coverage threshold (baseline for existing code)
# Baseline: 34.94% (current coverage as of 2025-11-15)
# New code must meet 85% coverage (enforced in CI via diff-cover)
# Long-term goal: Improve baseline to 70%
fail_under = 34

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.json]
output = "coverage.json"
pretty_print = true
