load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["auth.go"],
    importpath = "github.com/michelangelo-ai/michelangelo/go/auth",
    visibility = ["//visibility:public"],
    deps = ["@org_uber_go_fx//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["auth_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@org_uber_go_fx//:go_default_library",
        "@org_uber_go_fx//fxtest:go_default_library",
    ],
)
