load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "controller.go",
        "module.go",
    ],
    importpath = "github.com/michelangelo-ai/michelangelo/go/deployment",
    visibility = ["//visibility:public"],
    deps = [
        "//go/api/utils:go_default_library",
        "//go/deployment/plugins:go_default_library",
        "//go/deployment/plugins/oss:go_default_library",
        "//go/shared/gateways/inferenceserver:go_default_library",
        "//proto/api:go_default_library",
        "//proto/api/v2:go_default_library",
        "@com_github_go_logr_logr//:go_default_library",
        "@io_k8s_client_go//tools/record:go_default_library",
        "@io_k8s_sigs_controller_runtime//:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/controller:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/controller/controllerutil:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/log:go_default_library",
        "@org_uber_go_fx//:go_default_library",
        "@com_github_go_logr_zapr//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
