load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "audit_log_struct.go",
        "audit_logger.go",
        "noop_logr_sink.go",
    ],
    importpath = "github.com/michelangelo-ai/michelangelo/go/logging",
    visibility = ["//visibility:public"],
    deps = ["@com_github_go_logr_logr//:go_default_library"],
)
